# lvgl-glfw

./: CMakeLists.txt
src/: lv_conf.h  main.c
